# pose-to-video

./: .gitignore  README.md  pyproject.toml
.github/workflows/: controlnet.yaml  lint.yaml  pix2pix.yaml  simple_upscaler.yaml
data/BIU-MG/: .gitignore  README.md  video_to_images.py
pose_to_video/: __init__.py  bin.py  utils.py
pose_to_video/conditional/controlnet/: README.md  __init__.py  dataset.py  train.sh
pose_to_video/conditional/pix2pix/: README.md  __init__.py
pose_to_video/conditional/pix2pix/src/: read_tensorboard.py  train.py
pose_to_video/processors/animatediff/: __init__.py
pose_to_video/processors/simple_upscaler/: __init__.py
pose_to_video/unconditional/animation_control/: train_stylegan3.sh
pose_to_video/unconditional/animation_control/src/: convert_model.py  data.py  train.py
pose_to_video/unconditional/mixamo/src/rendering/: animate.py
pose_to_video/unconditional/stylegan3/: .gitignore
