[project]
name = "pose-to-video"
description = "Render sign language poses into videos"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
dependencies = [
    "numpy",
    "opencv-python",
    "pose-format",
    "tqdm",
    "mediapipe"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint"
]

[tool.poetry.extras]
pix2pix = ["tensorflow"]
controlnet = ["diffusers", "accelerate", "xformers"]
stylegan3 = []
mixamo = []
upscaler = ["tensorflow"]


[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]

[tool.pylint.typecheck]
generated-members = ["cv2.*"]


[tool.setuptools]
packages = [
    "pose_to_video",
    "pose_to_video.conditional",
    "pose_to_video.conditional.controlnet",
    "pose_to_video.conditional.pix2pix",
    "pose_to_video.unconditional",
    "pose_to_video.unconditional.stylegan3",
    "pose_to_video.unconditional.mixamo",
    "pose_to_video.upscalers",
    "pose_to_video.upscalers.simple",
]

[tool.setuptools.package-data]
pose_to_video = ["upscalers/upscaler/dist/*.h5"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["pose_to_video"]

[project.scripts]
pose_to_video = "pose_to_video.bin:main"
