[project]
name = "pose-to-video"
description = "Render sign language poses into videos"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "pose-format",
    "tqdm",
    "mediapipe"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint"
]

[tool.poetry.extras]
pix2pix = ["tensorflow<=2.15.0"]
controlnet = ["diffusers", "accelerate", "xformers"]
animatediff = ["diffusers"]
stylegan3 = []
mixamo = []
simple_upscaler = ["tensorflow<=2.15.0"]


[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0415", # Import outside toplevel
]
good-names = ["i", "f", "x", "y"]


[tool.pylint.typecheck]
generated-members = ["cv2.*", "torch.*", "numpy.*", "tensorflow.*"]


[tool.setuptools]
packages = [
    "pose_to_video",
    "pose_to_video.conditional",
    "pose_to_video.conditional.controlnet",
    "pose_to_video.conditional.pix2pix",
    "pose_to_video.unconditional",
    "pose_to_video.unconditional.stylegan3",
    "pose_to_video.unconditional.mixamo",
    "pose_to_video.processors",
    "pose_to_video.processors.simple_upscaler",
    "pose_to_video.processors.animatediff",
]

[tool.setuptools.package-data]
pose_to_video = ["**/*.h5"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["pose_to_video"]

[project.scripts]
pose_to_video = "pose_to_video.bin:main"
